Fix a few bugs:

* Note changes necessary to Gold 2.23.2 / 11.1 needed to process uClibc programs properly
(http://sourceware.org/bugzilla/show_bug.cgi?id=15435)

* Add missing useful scripts

* Add -simplifycfg to prepare-int to ensure dead loops are eliminated (note -loop-deletion does /not/ do this, it eliminates loops that are reachable but have a known trip count and are computationally useless; simplifycfg does the required BB mark and sweep)
This is necessary because we assume the topsort by postorder DFS of a function's blocks will cover them all.

* Check arguments exist before assigning to them